Compile.and.Load/src/Sigged.Repl.NetCore.Web/assets/css/_repl-ui.scss
[v-cloak] {
    display: none;
}

.repl-wrapper {
    height: 100vh;
    max-height: 100vh;
    display: flex;
    flex-direction:column;
}

.repl-header {
    z-index: 10;
    height: 50px;

    @media only screen and (min-width: 768px) {
        height: 57px;
    }
}

.repl-main {
    background-color: yellow;
    height: calc(100% - 50px);

    @media only screen and (min-width: 768px) {
        height: calc(100% - 57px);
    }
}

.repl-main-ide {
    height: 100%;
    background-color: #fff;
    display: grid;
    grid-gap: 0;
    grid-template-areas:
        "console hsplitter source"
        "vsplitter-err vsplitter-err vsplitter-err"
        "errors errors errors"
        "vsplitter-st vsplitter-st vsplitter-st"
        "status status status"
}

.repl-main-ide-console {
    grid-area: console;
    background-color: #000;
    color:#ddd;
}

.repl-main-ide-source {
    grid-area: source;
    background-color: #fff;
    display: flex;
    flex-direction: column;

    .repl-main-ide-toolbar {
        padding: 5px 10px;
        z-index: 5;
        height: 50px;
        width: 100%;
        background-color: #efefef;
        border-bottom: 1px solid #ccc;
        box-shadow: 0 0.25rem 0.75rem rgba(0, 0, 0, 0.05);

        .btn {

            &[disabled]{
                opacity:0.3;
            }

            img {
                margin-right: 10px;
                width: 24px;
                height: 24px;
            }
        }
    }

    iframe {
        flex-grow: 1;
        border: none;
        width: 100%;
    }
}


.repl-main-ide-errors {
    grid-area: errors;
    overflow-x: auto;
    overflow-y: auto;

    table {
        min-width: 100%;
        border: none;
        font-size: small;

        tr {
            border-bottom: 1px solid #efefef;

            th {
                font-size: medium;
                font-weight: normal;
                background-color: #efefef;
                border-right: 1px solid #ccc;
                border-bottom: 1px solid #ccc;
            }

            td {
                border-right: 1px solid #efefef;
            }

            td, th {
                padding: 2px 4px;
                white-space: nowrap;
                width: auto;

                &:nth-child(1) {
                    width: 24px;

                    img {
                        width: 24px;
                        height: 24px;
                    }
                }

                &:nth-child(2) {
                    width: 10%;
                }

                &:nth-child(3) {
                    width: 10%;
                }
            }
        }
    }
}

.repl-main-ide-status {
    grid-area: status;
    background-color: #0072c3;
    color: #fff;
    padding: 5px;
    font-size: 0.9em;

    div {

        &.repl-main-ide-status-label {
            float: right;
            padding: 0 5px;
            display: inline-block;
        }

        &.repl-main-ide-status-progressbar {
            float: right;
            display: inline-block;
            width: 200px;
            height: 100%;
        }
    }
}


.gridsplitter-control-h {
    border-left: outset 3px #eaeaea;
    border-right: outset 2px #eaeaea;
    background-color: #eaeaea;
    cursor: col-resize;
}

.gridsplitter-control-v {
    border-top: outset 3px #eaeaea;
    border-bottom: outset 2px #eaeaea;
    background-color: #eaeaea;
    cursor: row-resize;
}

.repl-main-ide-splitter-h {
    grid-area: hsplitter;
    
    //cursor:col-resize;
}

.repl-main-ide-splitter-v-err {
    grid-area: vsplitter-err;
    //
}

.repl-main-ide-splitter-v-st {
    grid-area: vsplitter-st;
    //cursor: row-resize;
}

